# fame_shop

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
envs/: .env.example
src/config/: settings.py  urls.py
src/core/: admin.py  models.py  services.py  views.py
src/core/forms/: orders.py  users.py
src/core/migrations/: 0001_initial.py  0002_personaldata.py
src/core/urls/: base.py  shop.py
src/static/css/: style.css
src/static/js/: cart.js  detail.js
src/templates/: base.html
src/templates/shops/: cart.html  checkout_history.html  detail.html  index.html  list.html
src/templates/users/: login.html  profile.html  register.html
