[tool.poetry]
name = "shop-sample"
version = "0.1.0"
description = ""
authors = ["fayzikuloff.b <fayzikuloff.b@gmail.com>"]
readme = "README.md"
packages = [{include = "shop_sample"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
