[tool.black]
line-length = 120
target-version = ['py310']
force-exclude = '''
(
    \.eggs
  | \.git
  | build
  | dist
  | venv
  | .venv
  | migrations
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
skip_glob = ['**/migrations/**', '**/.venv/**']


[tool.poetry]
name = "shop-sample"
version = "0.1.0"
description = ""
authors = ["fayzikuloff.b <fayzikuloff.b@gmail.com>"]
readme = "README.md"
packages = [{include = "shop_sample"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "3.0"
pillow = "^9.5.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
